@@ -24,7 +24,8 @@ ModuleObjects runTransactionTest.cc : System ;
 
 for model in
 	Rover-transaction.nddl basic-model-transaction.nddl k9.backtrack.moderate-transaction.nddl
-	k9-transaction.nddl path-filter-transaction.nddl force-object-distribution.nddl
+	k9-transaction.nddl path-filter-transaction.nddl foreach-transaction.nddl force-object-distribution.nddl 
+	resource-backtrack-test.nddl
 {
   local exe = $(model:S=) ;
   NddlMain $(exe) : runTransactionTest.o : $(model) : System ;
